<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="sort_order"
        android:title="Sort Order"
        android:summary="@string/sort_description"
        android:entries="@array/sort_names"
        android:entryValues="@array/sort_clauses"
        android:dialogTitle="Choose a sort order" />
    <CheckBoxPreference
        android:key="alarm"
        android:title="Sound a Lunch Alarm"
        android:summary="Check if you want to know when it is time for lunch" />
    <csci498.cokembel.lunchlist.TimePreference
        android:key="alarm_time"
        android:title="Lunch Alarm Time"
        android:defaultValue="12:00"
        android:summary="@string/alarm_time_description"
        android:dependency="alarm" />
    <CheckBoxPreference
        android:key="use_notification"
        android:title="Use a Notification"
        android:defaultValue="true"
        android:summary="@string/notification_description"
        android:dependency="alarm" />
    <RingtonePreference 
        android:key="alarm_ringtone"
        android:title="Alarm Ringtone"
        android:summary="@string/ringtone_description"
        android:showSilent="true"
        android:dependency="alarm" />
</PreferenceScreen>