
   <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="match_parent"
       android:layout_height="wrap_content" >
     <TableLayout android:id="@+id/details"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:stretchColumns="1" 
	    android:shrinkColumns="1">
	    <TableRow>
	        <TextView android:text="@string/name" />
	        <EditText android:id="@+id/name" />
	    </TableRow>
	    <TableRow>
	        <TextView android:text="@string/address" />
	        <AutoCompleteTextView android:id="@+id/addr" />
	    </TableRow>
	    <TableRow
	        android:id="@+id/radioRow"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	        <TextView android:text="@string/type" />
	        <RadioGroup android:id="@+id/types">
				<RadioButton android:id="@+id/take_out"
					android:text="Take-Out"
					android:checked="true"
				/>
	       		<RadioButton android:id="@+id/sit_down"			            
					android:text="Sit-Down"
				/>
				<RadioButton android:id="@+id/delivery"
					android:text="Delivery"
				/>
			</RadioGroup>
		</TableRow>	
		<TableRow>
		    <TextView android:text="Location:" />
		    <TextView android:id="@+id/location" android:text="(no set)" />
		</TableRow>
		<EditText android:id="@+id/notes"
		    android:inputType="textMultiLine"
		    android:singleLine="false"
		    android:gravity="top"
		    android:lines="2"
		    android:scrollHorizontally="false"
		    android:maxLines="2"
		    android:hint="Notes"
		/>    
		<EditText android:id="@+id/feed"
		    android:hint="Feed URL"
		/>
	</TableLayout>
</ScrollView>
